--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
     "expo-web-browser": "~15.0.7",
+    "install": "^0.13.0",
     "matter-js": "^0.20.0",
     "nativewind": "^4.2.1",
     "prettier-plugin-tailwindcss": "^0.6.14",
