--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@shopify/flash-list": "2.0.2",
+    "@types/three": "^0.180.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "expo": "~54.0.10",
     "expo-constants": "~18.0.9",
     "expo-dev-client": "~6.0.12",
     "expo-font": "~14.0.8",
+    "expo-gl": "^16.0.7",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.8",
     "expo-linking": "~8.0.8",
@@ -35,6 +37,7 @@
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
+    "expo-three": "^8.0.0",
     "expo-web-browser": "~15.0.7",
     "install": "^0.13.0",
     "matter-js": "^0.20.0",
@@ -52,7 +55,8 @@
     "react-native-worklets": "0.5.1",
     "rn-icon-mapper": "^0.0.1",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^3.4.0"
+    "tailwindcss": "^3.4.0",
+    "three": "^0.180.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
