--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
-    "expo-three": "^8.0.0",
+    "expo-three": "^2.2.1",
     "expo-web-browser": "~15.0.7",
     "install": "^0.13.0",
     "matter-js": "^0.20.0",
@@ -52,11 +52,12 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
+    "react-native-webview": "^13.16.0",
     "react-native-worklets": "0.5.1",
     "rn-icon-mapper": "^0.0.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.0",
-    "three": "^0.180.0"
+    "three": "^0.166.1"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
