feat: Implement Menubar with Drawer Navigation and add ModelViewer component

--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.2",
     "@react-navigation/bottom-tabs": "^7.4.0",
+    "@react-navigation/drawer": "^7.5.8",
     "@react-navigation/elements": "^2.6.3",
-    "@react-navigation/native": "^7.1.8",
+    "@react-navigation/native": "^7.1.17",
     "@shopify/flash-list": "2.0.2",
     "@types/three": "^0.180.0",
     "class-variance-authority": "^0.7.1",
